ext-http-gateway/app1-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app1-route
  namespace: app1
spec:
  parentRefs:
  - namespace: infra
    name: external-http
  hostnames:
  - "app1.domain.com"
  rules:
  - backendRefs:
    - name: app1
      kind: Service
      port: 8080
