ext-http-gateway/app2-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app2-route
  namespace: app2
spec:
  parentRefs:
  - namespace: infra
    name: external-http
  hostnames:
  - "app2.domain.com"
  rules:
  - backendRefs:
    - name: app2
      kind: Service
      port: 8080
