ext-http-gateway/routes.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app1-route
  namespace: app1
spec:
  parentRefs:
  - namespace: infra
    name: external-http
  hostnames:
  - "app1.domain.com"
  - "www.domain.com"
  rules:
  - backendRefs:
    - name: app1
      kind: Service
      port: 8080
  - matches:
    - headers:
      - name: app
        value: app1
    backendRefs:
    - name: app1
      kind: Service
      namespace: app1
      port: 8080
  - matches:
    - path:
        value: /app1
    backendRefs:
    - name: app1
      kind: Service
      namespace: app1
      port: 8080
